gave footer fixed position, width 100%, removed text align, gave bottom/left sizing

--- a/Assets/Images/style.css
+++ b/Assets/Images/style.css
@@ -28,4 +28,8 @@ footer {
     border-top: teal solid 9px;
     padding: 15px;
     text-align: center;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    left: 0;
 }
